--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "chokidar": "^3.2.1",
     "commander": "^7.0.0",
     "cssnano-preset-default": "^4.0.7",
-    "fs-extra": "^9.0.0",
     "glob": "^7.1.2",
     "injection-js": "^2.2.1",
     "less": "^4.0.0",
@@ -85,6 +84,7 @@
     "@types/mocha": "^8.0.0",
     "@types/node": "^14.0.0",
     "@types/read-pkg-up": "^3.0.1",
+    "@types/rimraf": "^3.0.0",
     "@types/sinon": "^9.0.0",
     "@types/stylus": "^0.48.30",
     "@types/uglify-js": "^3.0.2",
@@ -98,6 +98,7 @@
     "mocha": "^8.0.0",
     "prettier": "~2.2.0",
     "pretty-quick": "~3.1.0",
+    "fs-extra": "^9.0.0",
     "rxjs-compat": "^6.0.0",
     "sinon": "^9.0.0",
     "source-map": "^0.7.0",
