refactor: rename integration/samples/failures to fail-missing-deps

--- a/integration/samples/fail-missing-deps/package.json
+++ b/integration/samples/fail-missing-deps/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "non-peer-deps",
+  "name": "fail-missing-deps",
   "description": "https://github.com/ng-packagr/ng-packagr/pull/687",
   "dependencies": {
     "foobar": "1.0.0"
