refactor: update to use Node 12 APIs
BREAKING CHANGE:
Node.js version 10 will become EOL on 2021-04-30.
Angular CLI 12 will require Node.js 12.13+ or 14.15+. Node.js 12.13 and 14.15 are the first LTS releases for their respective majors.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "css",
     "scss"
   ],
+  "engines": {
+    "node": ">=12.13.0"
+  },
   "author": "David Herges <david@spektrakel.de>",
   "license": "MIT",
   "repository": "https://github.com/ng-packagr/ng-packagr.git",
