--- a/package.json
+++ b/package.json
@@ -62,13 +62,13 @@
   },
   "devDependencies": {
     "@angular/cdk": "^11.0.0",
-    "@angular/common": "~11.1.0-next.0",
-    "@angular/compiler": "~11.1.0-next.0",
-    "@angular/compiler-cli": "~11.1.0-next.0",
-    "@angular/core": "~11.1.0-next.0",
+    "@angular/common": "~11.2.0",
+    "@angular/compiler": "~11.2.0",
+    "@angular/compiler-cli": "~11.2.0",
+    "@angular/core": "~11.2.0",
     "@angular/material": "^11.0.0",
-    "@angular/platform-browser": "~11.1.0-next.0",
-    "@angular/router": "~11.1.0-next.0",
+    "@angular/platform-browser": "~11.2.0",
+    "@angular/router": "~11.2.0",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-angular": "^11.0.0",
     "@types/acorn": "^4.0.3",
