--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "terser": "^5.5.1"
   },
   "peerDependencies": {
-    "@angular/compiler": "^11.0.0",
-    "@angular/compiler-cli": "^11.0.0",
+    "@angular/compiler": "^12.0.0-next.0",
+    "@angular/compiler-cli": "^12.0.0-next.0",
     "tslib": "^2.0.0",
     "typescript": ">=4.0 <4.2"
   },
