--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@rollup/plugin-node-resolve": "^11.1.0",
     "ajv": "^7.0.3",
     "ansi-colors": "^4.1.1",
-    "autoprefixer": "^10.2.4",
     "browserslist": "^4.16.1",
     "chokidar": "^3.5.1",
     "commander": "^7.0.0",
@@ -45,6 +44,7 @@
     "node-sass-tilde-importer": "^1.0.2",
     "ora": "^5.1.0",
     "postcss": "^8.2.4",
+    "postcss-preset-env": "^6.7.0",
     "postcss-url": "^10.1.1",
     "rimraf": "^3.0.0",
     "rollup": "^2.37.0",
@@ -81,6 +81,7 @@
     "@types/less": "^3.0.2",
     "@types/mocha": "^8.0.0",
     "@types/node": "^14.0.0",
+    "@types/postcss-preset-env": "^6.7.1",
     "@types/read-pkg-up": "^3.0.1",
     "@types/rimraf": "^3.0.0",
     "@types/sinon": "^9.0.0",
