--- a/package.json
+++ b/package.json
@@ -63,13 +63,13 @@
   },
   "devDependencies": {
     "@angular/cdk": "^11.0.0",
-    "@angular/common": "~11.2.0",
-    "@angular/compiler": "~11.2.0",
-    "@angular/compiler-cli": "~11.2.0",
-    "@angular/core": "~11.2.0",
+    "@angular/common": "~12.0.0-next.0",
+    "@angular/compiler": "~12.0.0-next.0",
+    "@angular/compiler-cli": "~12.0.0-next.0",
+    "@angular/core": "~12.0.0-next.0",
     "@angular/material": "^11.0.0",
-    "@angular/platform-browser": "~11.2.0",
-    "@angular/router": "~11.2.0",
+    "@angular/platform-browser": "~12.0.0-next.0",
+    "@angular/router": "~12.0.0-next.0",
     "@commitlint/cli": "^12.0.0",
     "@commitlint/config-angular": "^12.0.0",
     "@types/acorn": "^4.0.3",
