--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
   "peerDependencies": {
     "@angular/compiler": "^12.0.0-next.0",
     "@angular/compiler-cli": "^12.0.0-next.0",
-    "tslib": "^2.0.0",
-    "typescript": ">=4.0 <4.2"
+    "tslib": "^2.1.0",
+    "typescript": "~4.2.3"
   },
   "devDependencies": {
     "@angular/cdk": "^11.0.0",
