--- a/integration/consumers/ng-cli/package.json
+++ b/integration/consumers/ng-cli/package.json
@@ -16,35 +16,35 @@
   "private": true,
   "dependencies": {
     "@angular/cdk": "~11.2.0",
-    "@angular/common": "~11.2.0",
-    "@angular/compiler": "~11.2.0",
-    "@angular/core": "~11.2.0",
-    "@angular/forms": "~11.2.0",
-    "@angular/platform-browser": "~11.2.0",
-    "@angular/platform-browser-dynamic": "~11.2.0",
-    "@angular/router": "~11.2.0",
+    "@angular/common": "~12.0.0-next.6",
+    "@angular/compiler": "~12.0.0-next.6",
+    "@angular/core": "~12.0.0-next.6",
+    "@angular/forms": "~12.0.0-next.6",
+    "@angular/platform-browser": "~12.0.0-next.6",
+    "@angular/platform-browser-dynamic": "~12.0.0-next.6",
+    "@angular/router": "~12.0.0-next.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.0",
-    "@angular/cli": "~11.2.0",
-    "@angular/compiler-cli": "~11.2.0",
+    "@angular-devkit/build-angular": "~0.1200.0-next.6",
+    "@angular/cli": "~12.0.0-next.6",
+    "@angular/compiler-cli": "~12.0.0-next.6",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^14.0.0",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.7.0",
     "jasmine-spec-reporter": "~6.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~2.0.0",
-    "karma-coverage-istanbul-reporter": "~3.0.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.5.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~9.1.0",
-    "tslint": "~5.20.0",
+    "tslint": "~6.1.0",
     "typescript": "4.2.3"
   }
 }
