--- a/integration/consumers/ng-cli/tsconfig.json
+++ b/integration/consumers/ng-cli/tsconfig.json
@@ -1,19 +1,17 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "module": "esnext",
+    "module": "es2020",
     "outDir": "./dist/out-tsc",
     "baseUrl": "src",
     "skipLibCheck": true,
     "declaration": false,
     "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es2015",
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2018", "dom"]
   },
-  // Figure out what's wrong with this test in Ivy
   "angularCompilerOptions": {
     "disableTypeScriptVersionCheck": true
   }
