--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "scss"
   ],
   "engines": {
-    "node": ">=12.13.0"
+    "node": ">=12.14.1 <16.0.0"
   },
   "author": "David Herges <david@spektrakel.de>",
   "license": "MIT",
