--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "ajv": "^8.0.0",
     "ansi-colors": "^4.1.1",
     "browserslist": "^4.16.1",
+    "cacache": "^15.0.6",
     "chokidar": "^3.5.1",
     "commander": "^7.0.0",
     "cssnano": "^5.0.0",
+    "find-cache-dir": "^3.3.1",
     "glob": "^7.1.6",
     "injection-js": "^2.4.0",
     "jsonc-parser": "^3.0.0",
@@ -71,9 +73,11 @@
     "@commitlint/cli": "^12.0.0",
     "@commitlint/config-angular": "^12.0.0",
     "@types/acorn": "^4.0.3",
+    "@types/cacache": "^15.0.0",
     "@types/chai": "^4.0.0",
     "@types/chokidar": "^1.7.5",
     "@types/cssnano": "^4.0.0",
+    "@types/find-cache-dir": "^3.2.0",
     "@types/fs-extra": "^9.0.10",
     "@types/glob": "^7.0.0",
     "@types/jasmine": "^3.0.0",
