--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "stylus": "^0.54.8"
   },
   "peerDependencies": {
-    "@angular/compiler": "^12.0.0-next.0",
-    "@angular/compiler-cli": "^12.0.0-next.0",
+    "@angular/compiler-cli": "^12.0.0 || ^12.1.0-next.0",
     "tslib": "^2.1.0",
     "typescript": "~4.2.3"
   },
