--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "chokidar": "^3.5.1",
     "commander": "^7.0.0",
     "cssnano": "^5.0.0",
+    "dependency-graph": "^0.11.0",
     "find-cache-dir": "^3.3.1",
     "glob": "^7.1.6",
     "injection-js": "^2.4.0",
