--- a/package.json
+++ b/package.json
@@ -59,17 +59,17 @@
   "peerDependencies": {
     "@angular/compiler-cli": "^12.0.0 || ^12.1.0-next.0",
     "tslib": "^2.1.0",
-    "typescript": "~4.2.3"
+    "typescript": "~4.2.3 || ~4.3.2"
   },
   "devDependencies": {
     "@angular/cdk": "^12.0.0",
-    "@angular/common": "~12.0.0-next.0",
-    "@angular/compiler": "~12.0.0-next.0",
-    "@angular/compiler-cli": "~12.0.0-next.0",
-    "@angular/core": "~12.0.0-next.0",
+    "@angular/common": "~12.1.0-next.0",
+    "@angular/compiler": "~12.1.0-next.0",
+    "@angular/compiler-cli": "~12.1.0-next.0",
+    "@angular/core": "~12.1.0-next.0",
     "@angular/material": "^12.0.0",
-    "@angular/platform-browser": "~12.0.0-next.0",
-    "@angular/router": "~12.0.0-next.0",
+    "@angular/platform-browser": "~12.1.0-next.0",
+    "@angular/router": "~12.1.0-next.0",
     "@commitlint/cli": "^12.0.0",
     "@commitlint/config-angular": "^12.0.0",
     "@types/acorn": "^4.0.3",
@@ -104,7 +104,7 @@
     "standard-version": "^9.0.0",
     "ts-node": "^10.0.0",
     "tslib": "^2.0.0",
-    "typescript": "~4.2.0",
+    "typescript": "~4.3.3",
     "zone.js": "^0.11.0"
   },
   "private": true,
