--- a/integration/consumers/ng-cli/package.json
+++ b/integration/consumers/ng-cli/package.json
@@ -15,22 +15,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "~12.0.0",
-    "@angular/common": "~12.0.0-next.9",
-    "@angular/compiler": "~12.0.0-next.9",
-    "@angular/core": "~12.0.0-next.9",
-    "@angular/forms": "~12.0.0-next.9",
-    "@angular/platform-browser": "~12.0.0-next.9",
-    "@angular/platform-browser-dynamic": "~12.0.0-next.9",
-    "@angular/router": "~12.0.0-next.9",
+    "@angular/cdk": "~12.1.0",
+    "@angular/common": "~12.1.0",
+    "@angular/compiler": "~12.1.0",
+    "@angular/core": "~12.1.0",
+    "@angular/forms": "~12.1.0",
+    "@angular/platform-browser": "~12.1.0",
+    "@angular/platform-browser-dynamic": "~12.1.0",
+    "@angular/router": "~12.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.0-next.9",
-    "@angular/cli": "~12.0.0-next.9",
-    "@angular/compiler-cli": "~12.0.0-next.9",
+    "@angular-devkit/build-angular": "~12.1.0",
+    "@angular/cli": "~12.1.0",
+    "@angular/compiler-cli": "~12.1.0",
     "@types/node": "^14.14.37",
     "typescript": "4.3.4"
   }
