--- a/package.json
+++ b/package.json
@@ -57,19 +57,19 @@
     "stylus": "^0.54.8"
   },
   "peerDependencies": {
-    "@angular/compiler-cli": "^12.0.0 || ^12.2.0-next.0",
+    "@angular/compiler-cli": "^13.0.0-next.0",
     "tslib": "^2.1.0",
     "typescript": "~4.2.3 || ~4.3.2"
   },
   "devDependencies": {
     "@angular/cdk": "^12.0.0",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/compiler-cli": "~12.2.0",
-    "@angular/core": "~12.2.0",
+    "@angular/common": "~13.0.0-next",
+    "@angular/compiler": "~13.0.0-next",
+    "@angular/compiler-cli": "~13.0.0-next",
+    "@angular/core": "~13.0.0-next",
     "@angular/material": "^12.0.0",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/router": "~12.2.0",
+    "@angular/platform-browser": "~13.0.0-next",
+    "@angular/router": "~13.0.0-next",
     "@commitlint/cli": "^13.0.0",
     "@commitlint/config-angular": "^13.0.0",
     "@types/acorn": "^4.0.3",
